# streamlit-google-auth

./: README.md  example1.py  example2.py  pyproject.toml
src/streamlit_google_auth/: __init__.py  _auth.py  _cookies.py
src/streamlit_google_auth/cookie/: __init__.py
