[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "streamlit-google-auth"
version = "1.1.1"
description = "Use Google authentification in streamlit"
readme = "README.md"
authors = [{ name = "Adrien Bouvais", email = "adrien.bouvais.pro@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["streamlit", "google", "authentification"]
dependencies = [
    "streamlit",
    "pyjwt",
    "extra-streamlit-components",
    "google-auth-oauthlib",
    "google-api-python-client"
]
requires-python = ">=3.9.7"

[project.urls]
Homepage = "https://github.com/MrBounty/streamlit-google-auth"
